logs/codernitydb.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/CodernityDB'...
Compiling './lib/python3.5/site-packages/CodernityDB/database.py'...
***   File "./lib/python3.5/site-packages/CodernityDB/database.py", line 202
    exec obj in globals()
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/CodernityDB/debug_stuff.py'...
***   File "./lib/python3.5/site-packages/CodernityDB/debug_stuff.py", line 33
    print '-----CURRENT TREE-----'
                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/CodernityDB/multi_index.py'...
***   File "./lib/python3.5/site-packages/CodernityDB/multi_index.py", line 54
    print curr
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/CodernityDB/storage.py'...
***   File "./lib/python3.5/site-packages/CodernityDB/storage.py", line 139
    print locals()
               ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/CodernityDB-0.5.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
